Backward compatibility with Java8